--- a/test-project/Gemfile
+++ b/test-project/Gemfile
@@ -1,11 +1,12 @@
 source 'http://rubygems.org'
 
 gem 'rake', "0.9.2.2"
-gem 'mysql', "2.8.1"
+gem 'mysql2', "0.3.14"
 
 gem 'rspec', '< 3.0'
 gem 'rspec-core', '< 3.0'
 gem 'rspec-rails', '< 3.0'
+gem 'test-unit'
 
 # Load DbCharmer as a gem
 gem_path = File.expand_path(File.dirname(File.dirname(__FILE__)))
